<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/login_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:text="@string/login_admin"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />

            <com.yzx.mydefineview.EditTextWithClearImg
                android:id="@+id/edt_account"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@null"
                android:drawableRight="@drawable/login_clear"
                android:hint="@string/login_hint"
                android:inputType="numberDecimal"
                android:textColor="#7f7f7f" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dp"
            android:background="#dadada" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="30dp"
            android:background="@drawable/cycle_button"
            android:text="@string/login_login"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ImageView
        android:id="@+id/address_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/address_settings" 
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="26dp"
        />

</RelativeLayout>